# crypto-labs

./: Cargo.toml  README.md
lab1/: Cargo.toml
lab1/src/: bigram.rs  decrypt.rs  decrypt_bigrams.rs  encrypt.rs  lib.rs  main.rs  parser.rs  stuff.rs
lab1/texts/: small.txt
lab2/: Cargo.toml
lab2/src/: main.rs  prime_numbers.rs
lab3/: Cargo.toml
lab3/src/: main.rs  rsa.rs
lab4/: Cargo.toml
lab4/src/: client.rs  client_authenticator.rs  generator.rs  lib.rs  main.rs  security_base.rs  server.rs  server_authenticator.rs  srp6.rs
lab4/src/srp6/: mod.rs  security_base.rs
primes/: Cargo.toml
primes/src/: generation.rs  lib.rs  math.rs  modulo_generator.rs  prime.rs  prime_generator.rs  range.rs
