[package]
name = "lab1"
version = "0.1.0"
authors = ["Rexagon <reide740@gmail.com>"]
edition = "2018"

[lib]
name = "lab1"
path = "src/lib.rs"

[[bin]]
name = "lab1-decrypt"
path = "src/decrypt.rs"

[[bin]]
name = "lab1-encrypt"
path = "src/encrypt.rs"

[dependencies]
hashbrown = "0.6"
